# QtES

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  QES.pro  QtES.pro  README.md  global.pri  rpath.pri
cmake/: EnableCMP0048.cmake
doc/: README.md
src/: CMakeLists.txt  README.md  src.pro
src/app/: CMakeLists.txt  app.pro  app_version.h  main.cpp
src/apps/: .gitignore  CMakeLists.txt  apps.pro  version_ini_tag.h
src/apps/app/: CMakeLists.txt  app.pro  app.qrc  main.cpp  version_info.h  version_info.in.h
src/apps/app/resources/configs/: config.ini
src/libs/: CMakeLists.txt  libs.pro
src/libs/extensionsystem/: CMakeLists.txt  aggregate.cpp  aggregate.h  extensionsystem.pro  extensionsystem_global.h  invoker.cpp  invoker.h  iplugin.cpp  iplugin.h  iplugin_p.h  optionsparser.cpp  optionsparser.h  plugincollection.cpp  plugincollection.h  plugindetailsview.cpp  plugindetailsview.h  pluginerroroverview.cpp  pluginerroroverview.h  pluginerrorview.cpp  pluginerrorview.h  pluginmanager.cpp  pluginmanager.h  pluginmanager_p.h  pluginspec.cpp  pluginspec.h  pluginspec_p.h  pluginview.cpp  pluginview.h
src/libs/log/: CMakeLists.txt  custome_file_sink.h  logger.cpp  logger.h
src/libs/utils/: CMakeLists.txt  checkablemessagebox.cpp  checkablemessagebox.h  environment.cpp  environment.h  fileutil.cpp  fileutil.h  hostosinfo.cpp  hostosinfo.h  optional.hpp  runtimeerror.h  singleton.hpp  utils.pro  utils_global.h  yamlutil.cpp  yamlutil.h
src/libs/widgets/: CMakeLists.txt  checkablemessagebox.cpp  checkablemessagebox.h  checkablenavbutton.cpp  checkablenavbutton.h  numberlineedit.cpp  numberlineedit.h  progresscircle.cpp  progresscircle.h  waitingspinnerwidget.cpp  waitingspinnerwidget.h  widgets.pro  widgets_global.h
src/libs/widgets/delegate/: buttoncolumndelegate.cpp  buttoncolumndelegate.h  checkboxdelegate.cpp  checkboxdelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  lineeditdelegate.cpp  lineeditdelegate.h  numberlineeditdelegate.cpp  numberlineeditdelegate.h  radiobuttondelegate.cpp  radiobuttondelegate.h
src/libs/widgets/frameless/: basedialog.cpp  basedialog.h  framelesshelper.cpp  framelesshelper.h  titlebar.cpp  titlebar.h
src/libs/widgets/material/: components.pro  qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialappbar_p.h  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialbadge_p.h  qtmaterialcheckbox.cpp  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.cpp  qtmaterialcircularprogress_internal.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialdialog_p.h  qtmaterialdrawer.cpp  qtmaterialdrawer.h  qtmaterialdrawer_internal.cpp  qtmaterialdrawer_internal.h  qtmaterialdrawer_p.h  qtmaterialfab.cpp  qtmaterialfab.h  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  qtmaterialflatbutton_p.h  qtmaterialiconbutton.cpp  (+46 more)
src/libs/widgets/material/lib/: qtmaterialcheckable.cpp  qtmaterialcheckable.h  qtmaterialcheckable_internal.cpp  qtmaterialcheckable_internal.h  qtmaterialcheckable_p.h  (+14 more)
src/libs/widgets/qlite/: litebar.cpp  litebar.h  litebar_p.h  liteboard.cpp  liteboard.h  litedialog.cpp  litedialog.h  litemodebar.cpp  litemodebar.h  litescreen.cpp  litescreen.h  litetabbar.cpp  litetabbar.h  litetabwidget.cpp  litetabwidget.h  litewidget.cpp  litewidget.h  litewindow.cpp  litewindow.h  qlite.cpp  qlite.h  qlite_global.h
src/plugins/: CMakeLists.txt  plugincfg.prf  plugins.pro
src/plugins/core/: CMakeLists.txt  Core.json  Core.xml  core.pro  coreplugin.cpp  coreplugin.h  coreservice.h  coreserviceimpl.cpp  coreserviceimpl.h
src/plugins/coreplugin/: coreplugin.cpp  coreplugin.h  coreplugin.pro  coreplugin.xml
src/plugins/helloqtes/: CMakeLists.txt  HelloQtES.json  HelloQtES.xml  helloqtes.json  helloqtes.pro  helloqtes.xml  helloqtesplugin.cpp  helloqtesplugin.h  helloqtesservice.h  helloqtesserviceimpl.cpp  helloqtesserviceimpl.h  resource.qrc
src/plugins/helloworld/: helloplugin.cpp  helloplugin.h  helloplugin.xml  helloservice.h  helloserviceimpl.h  helloworld.pro
src/shared/: CMakeLists.txt
src/shared/qtlockedfile/: CMakeLists.txt  qtlockedfile.cpp  qtlockedfile.h  qtlockedfile.pri  qtlockedfile_unix.cpp  qtlockedfile_win.cpp
src/shared/qtsingleapplication/: CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h  qtsingleapplication.pri  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h  qtsinglecoreapplication.pri
src/shared/splashscreen/: splashscreen.cpp  splashscreen.h
src/tools/: CMakeLists.txt  tools.pro
src/tools/Plugin-Wizards/: Plugin-Wizards.pro  XXX.pro
src/tools/QtES-Plugin-Wizards/: CMakeLists.txt  QtES-Plugin-Wizards.pro  XXX.json  XXX.pro  XXX.xml  XXXplugin.cpp  XXXplugin.h  XXXserviceimpl.h  resource.qrc  wizard.json
src/tools/crashhandler/: CMakeLists.txt  backtracecollector.cpp  backtracecollector.h  crashhandler.cpp  crashhandler.h  crashhandler.pro  crashhandlerdialog.cpp  crashhandlerdialog.h  crashhandlerdialog.ui  crashhandlersetup.cpp  crashhandlersetup.h  main.cpp  utils.cpp  utils.h
tools/: tools.pro
tools/Plugin-Wizards/: Plugin-Wizards.pro  XXX.json  XXXplugin.cpp  XXXplugin.h  XXXservice.h  XXXserviceimpl.cpp  wizard.json
(+5 files in other folders)
